Unfinished implementation for QSSort.java, hashCode could be better